sventon change history
-----------------------------------------------------------------------------------------

[1047] Added: Feature #3900 - Change behaviour when searching entries.
[1044] Fixed: Bug #12698 - Highlighting problem when searching using wildcards.
 [982] Added: Feature #2164 - Repository browsing with user credential.
 [978] Added: Feature #3809 - Popup file type when cursor hovers over.
 [977] Added: Upgraded to Spring 2.5
 [944] Added: Feature #3825 - Entry tray.

[1067] Release 1.3.1 (2007-12-22)
[1066] Fixed: Sessions were not closed (only affects svn protocol).

 [970] Release 1.3.0 (2007-11-28)

 [934] Release 1.3 RC3 (2007-10-22)
 [933] Fixed: Bug #12252 - Faulty escaping in log search result view.

 [932] Release 1.3 RC2 (2007-10-22)
 [921] Fixed: Bug #12143 - Unable to show properties for archive files.
 [917] Fixed: Bug #12136 - Log message not escaped properly.

 [916] Release 1.3 RC1 (2007-10-08)
 [894] Added: Feature #3768 - Override mime-types in show file view.
 [891] Added: Feature #3767 - Show content of files inside archives.
 [874] Added: Feature #1571 - Browse specific date instead of revision.
 [860] Added: Feature #953 - Blame.
 [859] Added: Upgraded to SVNKit 1.1.4.
 [856] Added: Feature #3345 - More details in RSS body.
 [845] Added: Feature #3477 - Configurable feed sizes.
 [844] Added: Feature #3498 - Visual feedback when skipping directories.
 [843] Added: Feature #3341 - Log message popup div.

 [883] Release 1.2.0 (2007-09-08)

 [851] Release 1.2 RC3 (2007-07-21)
 [848] Fixed: Bug #11430 - Cache functionality doesn't work with file-protocol.
 [847] Fixed: Bug #11595 - EntryCache memory consumption.
 [840] Fixed: Bug #11251 - RSS feed creation error.

 [836] Release 1.2 RC2 (2007-05-18)
 [834] Added: Feature #3348 - Fix sort order in the instance list.
 [832] Fixed: Bug #10991 - ZIP download does not support non USASCII.
 [829] Fixed: Bug #10920 - Could not update cache instance.

 [825] Release 1.2 RC1 (2007-04-03)